# Instant-Desktop

./: .gitignore  Cargo.toml  README.md
src/: app.rs  config.rs  connection.rs  lib.rs  main.rs  palette.rs  windows.rs
