[package]
name = "instant-desktop"
version = "0.1.0"
authors = ["DaraJKong"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# druid = "0.8"
widestring = "1.0.2"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]
