[package]
name = "instant-desktop"
version = "0.2.1"
authors = ["DaraJKong"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8", features = ["im"] }
widestring = "1.0.2"

[dependencies.windows]
version = "0.51"
features = [
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]
